# Fluorine-Manager

./: .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build.sh  flake.nix  lint.sh
.github/workflows/: ci.yml  docker.yml
data/: com.fluorine.manager.metainfo.xml
data/icons/: com.fluorine.manager.desktop  com.fluorine.manager.metainfo.xml
docker/: AppRun.sh  Dockerfile  build-inner.sh
docs/: FAQ.md  fuse_vfs_perf_handoff.md
libs/7zip/: CMakeLists.txt
libs/archive/: README.md
libs/basic_games/: README.md  gog_utils.py  plugin-requirements.txt  pyproject.toml  steam_utils.py
libs/basic_games_native/: CMakeLists.txt
libs/basic_games_native/src/: CMakeLists.txt  basicgameplugin.cpp  basicgameplugin.h  basicgamesproxy.cpp  basicgamesproxy.h  gamedefs.cpp  gamedefs.h  steamutils.cpp  steamutils.h
libs/cmake_common/: mo2_versions.cmake
libs/form43_checker_native/: CMakeLists.txt
libs/form43_checker_native/src/: CMakeLists.txt  form43checker.cpp  form43checker.h
libs/game_bethesda/src/gamebryo/: CMakeLists.txt  gamebryogameplugins.cpp  gamebryolocalsavegames.cpp  gamegamebryo.cpp  gamegamebryo.h
libs/game_bethesda/src/games/ttw/: CMakeLists.txt  gamefalloutttw.cpp
libs/installer_bsplugins/: CMakeLists.txt
libs/installer_bsplugins/src/: CMakeLists.txt  ParseTES.cmake  bsplugins_en.ts
libs/installer_bsplugins/src/BSPluginInfo/: PluginRecordModel.cpp  PluginRecordView.cpp  RecordFilterProxyModel.cpp  plugininfodialog.ui
libs/installer_bsplugins/src/BSPluginList/: PluginListContextMenu.cpp  PluginListModel.cpp  PluginListModel.h  PluginSortFilterProxyModel.cpp  PluginsWidget.cpp  pluginswidget.ui
libs/installer_bsplugins/src/GUI/: IconDelegate.cpp  MessageDialog.cpp
libs/installer_bsplugins/src/MOPlugin/: BSPlugins.cpp  IPluginPanel.cpp  IPluginPanel.h  Settings.cpp  Settings.h
libs/installer_bsplugins/src/MOTools/: Loot.h
libs/installer_bsplugins/src/TESData/: AssociatedEntry.cpp  FileConflictParser.cpp  FileEntry.cpp  FileInfo.h  PluginList.cpp  PluginList.h  SingleRecordParser.cpp
libs/installer_bsplugins/src/TESFile/: Reader.inl  Stream.h  Type.h
libs/installer_bsplugins/src/lootcli/: lootcli.h
libs/installer_omod_native/: CMakeLists.txt
libs/installer_omod_native/src/: CMakeLists.txt  omodinstaller.cpp  omodinstaller.h
libs/libbsarch/: CMakeLists.txt
libs/libbsarch/src/: libbsarch.cpp
libs/nak/: Cargo.toml
libs/nak/src/: icons.rs  (+4 more)
libs/nak_ffi/: CMakeLists.txt
libs/nak_ffi/include/: nak_ffi.h
libs/nak_ffi/src/: lib.rs
libs/plugin_python/: pyproject.toml
libs/plugin_python/.github/workflows/: linting.yml
libs/plugin_python/src/mobase/wrappers/: basic_classes.cpp  pyplugins.cpp  pyplugins.h
libs/plugin_python/src/proxy/: CMakeLists.txt  proxypython.cpp
libs/plugin_python/src/runner/: pythonrunner.cpp  pythonrunner.h
libs/preview_dds_native/: CMakeLists.txt
libs/preview_dds_native/src/: CMakeLists.txt  ddsfile.cpp  ddsfile.h  ddsformat.cpp  ddsformat.h  ddspreview.cpp  ddspreview.h  ddswidget.cpp  ddswidget.h
libs/preview_nif/: CMakeLists.txt
libs/preview_nif/src/: CMakeLists.txt  NifWidget.cpp  OpenGLShape.cpp  OpenGLShape.h  PreviewNif.cpp  PreviewNif.h  TextureManager.cpp  TextureManager.h
libs/rootbuilder_native/: CMakeLists.txt
libs/rootbuilder_native/src/: CMakeLists.txt  rootbuilder.cpp  rootbuilder.h
libs/script_extender_checker_native/: CMakeLists.txt
libs/script_extender_checker_native/src/: CMakeLists.txt  scriptextenderchecker.cpp  scriptextenderchecker.h
libs/skse_log_redirector/: CMakeLists.txt
libs/skse_log_redirector/src/common/: CMakeLists.txt  skseLogRedirectorBase.cpp  skseLogRedirectorBase.h
libs/skse_log_redirector/src/gog/: CMakeLists.txt  skseLogRedirectorGOG.cpp  skseLogRedirectorGOG.h
libs/skse_log_redirector/src/sse/: CMakeLists.txt  skseLogRedirector.cpp  skseLogRedirector.h
libs/skse_log_redirector/src/vr/: CMakeLists.txt  skseLogRedirectorVR.cpp  skseLogRedirectorVR.h
libs/steam_appinfo_ffi/: CMakeLists.txt  Cargo.toml
libs/steam_appinfo_ffi/include/: steam_appinfo_ffi.h
libs/steam_appinfo_ffi/src/: lib.rs
libs/tool_bethinipie/: CMakeLists.txt
libs/tool_bethinipie/src/: CMakeLists.txt  bethinipie.cpp  bethinipie.h  bethinipie.qrc
libs/uibase/src/: CMakeLists.txt  filesystemutilities.cpp  log.cpp  nxmurl.cpp  registry.cpp  utility.cpp
nix/: mobase-shell.nix
src/: fluorine-manager
src/plugins/: installer_omod.py  rootbuilder.py
src/src/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  activatemodsdialog.cpp  activatemodsdialog.h  apiuseraccount.cpp  apiuseraccount.h  archivefiletree.cpp  archivefiletree.h  bbcode.cpp  browserview.cpp  categories.cpp  categories.h  categoriesdialog.cpp  categoriesdialog.h  categoriestable.cpp  categoriestable.h  categoryimportdialog.h  colortable.cpp  colortable.h  commandline.cpp  commandline.h  createinstancedialog.cpp  createinstancedialog.h  createinstancedialogpages.cpp  createinstancedialogpages.h  credentialsdialog.h  csvbuilder.cpp  csvbuilder.h  datatab.cpp  datatab.h  directoryrefresher.cpp  directoryrefresher.h  downloadlist.cpp  downloadlist.h  downloadlistview.cpp  downloadlistview.h  downloadmanager.cpp  downloadmanager.h  (+260 more)
src/src/shared/: appconfig.cpp  appconfig.h  appconfig.inc  directoryentry.cpp  fileentry.cpp  fileregister.h  fileregisterfwd.h  filesorigin.cpp  filesorigin.h  originconnection.cpp  util.cpp  util.h  windows_compat.h  windows_error.cpp  windows_error.h
src/src/stylesheets/: vs15 Dark-Green.qss  vs15 Dark-Orange.qss  vs15 Dark-Pink.qss  vs15 Dark-Purple.qss  vs15 Dark-Red.qss  vs15 Dark-Yellow.qss  vs15 Dark.qss
src/src/vfs/: fluorine_vfs_hooks.c  fluorine_vfs_inject.c  inodetable.cpp  inodetable.h  mo2filesystem.cpp  mo2filesystem.h  overwritemanager.cpp  overwritemanager.h  scancache.cpp  scancache.h  trackedwrites.cpp  trackedwrites.h  vfsbridge.cpp  vfsbridge.h  vfsbridgepreload.c  vfstree.cpp  vfstree.h
src/tests/: CMakeLists.txt  test_external_dir_mapping.cpp  test_metainiutils.cpp  test_overwrite_duplicates.cpp  test_vfs_file_ops.cpp
(+63 files in other folders)
